// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

package hashicorp.consul.resource;

import "google/protobuf/descriptor.proto";
import "pbresource/resource.proto";

enum Scope {
  // buf:lint:ignore ENUM_ZERO_VALUE_SUFFIX
  SCOPE_UNDEFINED = 0;
  SCOPE_CLUSTER = 1;
  SCOPE_PARTITION = 2;
  SCOPE_NAMESPACE = 3;
}

message ResourceTypeSpec {
  Scope scope = 1;
  bool dont_map_http = 2;
  Type override_type = 3;
}

extend google.protobuf.MessageOptions {
  ResourceTypeSpec spec = 8500;
}
